[gd_scene load_steps=3 format=3 uid="uid://euned6naim70"]

[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_sm4jw"]
[ext_resource type="PackedScene" uid="uid://du2mrpacolk4i" path="res://scenes/score/score_display.tscn" id="2_gqeni"]

[node name="menu" type="Node2D"]
process_mode = 3
rotation = -0.0144437
script = ExtResource("1_sm4jw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="start" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2(600, 300)

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer/start"]
position = Vector2(-600, -300)
color = Color(1, 1, 0.686275, 1)

[node name="title" type="Label" parent="CanvasLayer/start"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -555.0
offset_top = -243.0
offset_right = -449.0
offset_bottom = -217.0
grow_horizontal = 2
scale = Vector2(10, 10)
text = "Supply Game!"

[node name="start_button" type="Button" parent="CanvasLayer/start"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = 85.0
offset_right = 128.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
text = "start"

[node name="controls" type="RichTextLabel" parent="CanvasLayer/start"]
custom_minimum_size = Vector2(400, 200)
offset_left = -342.0
offset_top = 56.0
offset_right = 58.0
offset_bottom = 256.0
text = "wasd - move
qe - zoom"
fit_content = true

[node name="controls" type="Node2D" parent="CanvasLayer"]

[node name="pause_button" type="Button" parent="CanvasLayer/controls"]
visibility_layer = 524288
z_index = 1
anchors_preset = -1
anchor_right = 0.0303819
offset_left = 25.0
offset_top = 25.0
offset_right = 80.0
offset_bottom = 56.0
text = "pause"
metadata/_edit_use_anchors_ = true

[node name="skip_button" type="Button" parent="CanvasLayer/controls"]
visibility_layer = 524288
z_index = 1
anchors_preset = -1
anchor_right = 0.0303819
offset_left = 25.0
offset_top = 60.0
offset_right = 80.0
offset_bottom = 91.0
text = "skip"
metadata/_edit_use_anchors_ = true

[node name="ScoreDisplay" parent="CanvasLayer/controls" instance=ExtResource("2_gqeni")]
position = Vector2(1050, 86)
rotation = -0.0144437

[node name="end" type="Node2D" parent="CanvasLayer"]

[node name="title" type="Label" parent="CanvasLayer/end"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 89.0
offset_top = 82.0
offset_right = 181.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
text = "Game Over!"

[node name="restart_button" type="Button" parent="CanvasLayer/end"]
offset_left = 750.0
offset_top = 402.0
offset_right = 838.0
offset_bottom = 433.0
scale = Vector2(3, 3)
text = "Play Again
"

[node name="score" type="Label" parent="CanvasLayer/end"]
offset_left = 212.0
offset_top = 383.0
offset_right = 300.0
offset_bottom = 409.0
scale = Vector2(5, 5)
text = "Score: 9000"

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer/end"]
use_parent_material = true
color = Color(0.894118, 0.470588, 0.388235, 1)

[node name="process_continue_timer" type="Timer" parent="CanvasLayer/end"]

[connection signal="button_down" from="CanvasLayer/start/start_button" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="CanvasLayer/controls/pause_button" to="." method="_on_pause_button_button_down"]
[connection signal="button_down" from="CanvasLayer/controls/skip_button" to="." method="_on_skip_button_button_down"]
[connection signal="button_up" from="CanvasLayer/end/restart_button" to="." method="_on_restart_button_button_up"]
